       The registry entry is "Software\TortoiseSVN\UpdateCheckURL". (Stefan)
- NEW: "Show Log" command from the revision graph. See issue #184. (Stefan)
- NEW: Blames are now searchable. See issue #12. (Stefan)
- NEW: Column in the log dialog showing the actions of each revision, and
       the filter for paths now also searches for action strings.
       See issue #183 for details. (Stefan)
- CHG: The date filter in the log dialog now prevents the user from selecting
       dates outside the shown log messages. (Michael Dietschi)
- CHG: Warn if user selects files inside an added folder to create a patch.
       Subversion and patch doesn't support this. (Stefan)
- CHG: Ctrl-A now selects all entries in the file list controls. (Stefan)
- CHG: "Show log" in the file list controls for all versioned files.
       See issue #172. (Stefan)
- CHG: Ctrl-click expands the whole tree in the repository browser. (Stefan)
- CHG: Improved the revision graph. See issue #173. (Stefan)
- CHG: Better selecting of nodes in the revision graph. 
       See issue #185. (Stefan
- BUG: When files were added to the ignore list, a choice of 
       File.ext or *.ext is given. If the *.ext is chosen the dialog 
       box told that File.ext was successfully added instead of *.ext. (Stefan)
- BUG: After a merge which produced conflicts, the context menu wasn't
       shown with the entries to resolve the conflict. (Stefan)
- BUG: Creating a patch from files was disabled, it only worked
       from folders. (Stefan)
- BUG: The 'mark as resolved' and 'save' buttons were enabled even
       if TortoiseMerge was started from the 'Check for modifications'
       dialog. See issue #178. (Stefan)
- BUG: After marking a conflict as resolved in TortoiseMerge, it still
       asked if you want to save the changes on exit. (Stefan)

Version 1.2.6
- BUG: The status cache updated sometimes wrong paths or missed
       updating correct ones. (Stefan)